--- a/v1.0/index.html
+++ b/v1.0/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>new type of carousel | stolen from cr7 website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/ay-carousel.css">
 </head>
 <body>
     <div class="container">
-        <div class="carousel">
+        <div class="carousel first-one">
             <div class="items">
                 <div class="item"></div>
                 <div class="item"></div>
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="cas">
+        <div class="carousel">
             <div class="items">
                 <div class="item active">hi</div>
                 <div class="item">hi</div>
@@ -34,6 +34,6 @@
 
     <!-- The main scripts -->
     <!-- <script src="main.js"></script> -->
-    <script src="compiled/class.js"></script><script>console.log(new ay_carousel("body .cas"))</script>
+    <script src="compressed/scripts/ay-carousel.js"></script><script>console.log(new ay_carousel("body .carousel"))</script>
 </body>
 </html>
